--- a/index.html
+++ b/index.html
@@ -2,86 +2,136 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Resolution Tech Constructions | Coming Soon</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Resolution Tech Constructions</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
-    * {
+    body {
       margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+      font-family: 'Montserrat', sans-serif;
+      background: #f5f5f5;
+      color: #333;
     }
-
-    html, body {
-      height: 100%;
-      font-family: 'Open Sans', sans-serif;
-      background: url('https://images.unsplash.com/photo-1603360176263-3763b102ad90?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
-      background-size: cover;
-      color: #e0e0e0;
+    header {
+      background-color: #000;
+      color: white;
+      padding: 2rem;
+      text-align: center;
     }
-
-    .overlay {
-      background-color: rgba(0, 0, 0, 0.75);
-      height: 100%;
-      width: 100%;
+    header h1 {
+      font-size: 2.8rem;
+      margin: 0;
+      font-weight: 800;
+    }
+    nav {
+      background-color: #ffcc00;
       display: flex;
-      flex-direction: column;
       justify-content: center;
-      align-items: center;
+      gap: 2rem;
+      padding: 1rem;
+      font-weight: 600;
+    }
+    nav a {
+      color: black;
+      text-decoration: none;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .hero {
+      background: url('https://images.unsplash.com/photo-1581090700227-4c3b4cf766f0?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+      color: white;
+      padding: 8rem 2rem;
+      text-align: center;
+    }
+    .hero h2 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+    .section {
+      padding: 4rem 2rem;
+      max-width: 1200px;
+      margin: auto;
+    }
+    .section h3 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+    }
+    .card {
+      background: white;
+      padding: 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    .card h4 {
+      margin-top: 0;
+    }
+    footer {
+      background-color: #000;
+      color: white;
       text-align: center;
       padding: 2rem;
-    }
-
-    h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 3.5rem;
-      color: gold;
-      margin-bottom: 1rem;
-      letter-spacing: 1px;
-    }
-
-    h2 {
-      font-size: 1.5rem;
-      font-weight: 300;
-      color: silver;
-      max-width: 700px;
-      line-height: 1.6;
-      margin-bottom: 2rem;
-    }
-
-    .line {
-      width: 60px;
-      height: 2px;
-      background-color: gold;
-      margin: 2rem auto;
-    }
-
-    .footer {
-      position: absolute;
-      bottom: 1.5rem;
-      font-size: 0.9rem;
-      color: #aaa;
-    }
-
-    @media (max-width: 768px) {
-      h1 {
-        font-size: 2.2rem;
-      }
-      h2 {
-        font-size: 1.1rem;
-      }
+      margin-top: 4rem;
     }
   </style>
 </head>
 <body>
-  <div class="overlay">
+  <header>
     <h1>Resolution Tech Constructions</h1>
-    <h2>
-      We are redefining construction with precision, speed, and AI-powered innovation. Our luxurious standard is being built — and it’s coming soon.
-    </h2>
-    <div class="line"></div>
-    <h2>Launching Soon...</h2>
-    <div class="footer">&copy; 2025 Resolution Tech Constructions. All rights reserved.</div>
-  </div>
+  </header>
+  <nav>
+    <a href="#services">Services</a>
+    <a href="#projects">Projects</a>
+    <a href="#about">About Us</a>
+    <a href="#careers">Careers</a>
+    <a href="#contact">Contact</a>
+  </nav>
+  <section class="hero">
+    <h2>Building the Future with Precision</h2>
+    <p>From complex infrastructure to vertical construction, we deliver smart, safe, and sustainable solutions across all markets.</p>
+  </section>
+  <section class="section" id="services">
+    <h3>Our Services</h3>
+    <div class="grid">
+      <div class="card">
+        <h4>Construction Management</h4>
+        <p>Efficiently managing time, cost, and quality across all phases of your project.</p>
+      </div>
+      <div class="card">
+        <h4>Structural Engineering</h4>
+        <p>Innovative and safe designs tailored to your project needs and site constraints.</p>
+      </div>
+      <div class="card">
+        <h4>Restoration & Retrofit</h4>
+        <p>Modernizing aging infrastructure while preserving its integrity and value.</p>
+      </div>
+    </div>
+  </section>
+  <section class="section" id="projects">
+    <h3>Featured Projects</h3>
+    <div class="grid">
+      <div class="card">
+        <h4>Metro Line Expansion</h4>
+        <p>Engineering and construction of a major transit line, delivered ahead of schedule.</p>
+      </div>
+      <div class="card">
+        <h4>City Center Tower</h4>
+        <p>42-story commercial tower featuring smart systems and high-performance façades.</p>
+      </div>
+    </div>
+  </section>
+  <footer>
+    &copy; 2025 Resolution Tech Constructions. All rights reserved.
+  </footer>
 </body>
 </html>
