--- a/index.html
+++ b/index.html
@@ -1,137 +1,125 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Resolution Tech Constructions</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      background: #f5f5f5;
-      color: #333;
-    }
-    header {
-      background-color: #000;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
-    header h1 {
-      font-size: 2.8rem;
-      margin: 0;
-      font-weight: 800;
-    }
-    nav {
-      background-color: #ffcc00;
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      padding: 1rem;
-      font-weight: 600;
-    }
-    nav a {
-      color: black;
-      text-decoration: none;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .hero {
-      background: url('https://images.unsplash.com/photo-1581090700227-4c3b4cf766f0?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
-      color: white;
-      padding: 8rem 2rem;
-      text-align: center;
-    }
-    .hero h2 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-    .hero p {
-      font-size: 1.2rem;
-      max-width: 700px;
-      margin: 0 auto;
-    }
-    .section {
-      padding: 4rem 2rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-    .section h3 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-    }
-    .card {
-      background: white;
-      padding: 1.5rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    .card h4 {
-      margin-top: 0;
-    }
-    footer {
-      background-color: #000;
-      color: white;
-      text-align: center;
-      padding: 2rem;
-      margin-top: 4rem;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Resolution Tech Constructions</h1>
-  </header>
-  <nav>
-    <a href="#services">Services</a>
-    <a href="#projects">Projects</a>
-    <a href="#about">About Us</a>
-    <a href="#careers">Careers</a>
-    <a href="#contact">Contact</a>
-  </nav>
-  <section class="hero">
-    <h2>Building the Future with Precision</h2>
-    <p>From complex infrastructure to vertical construction, we deliver smart, safe, and sustainable solutions across all markets.</p>
-  </section>
-  <section class="section" id="services">
-    <h3>Our Services</h3>
-    <div class="grid">
-      <div class="card">
-        <h4>Construction Management</h4>
-        <p>Efficiently managing time, cost, and quality across all phases of your project.</p>
+import { Card } from "@/components/ui/card";
+import { Button } from "@/components/ui/button";
+import { Building, Wrench, Zap, ArrowRight, Star, Award } from "lucide-react";
+
+const PortfolioSection = () => {
+  const aiWorkflowFeatures = [
+    {
+      title: "AI-Powered Project Assessment",
+      description:
+        "Advanced algorithms analyze structural integrity, material conditions, and restoration requirements within hours instead of weeks.",
+      metrics: ["90% Faster Analysis", "99.7% Accuracy", "Code Compliant"],
+      icon: Building,
+      image:
+        "https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?w=800&h=600&fit=crop",
+    },
+    {
+      title: "Intelligent Resource Optimization",
+      description:
+        "Machine learning algorithms optimize material procurement, workforce allocation, and timeline management while maintaining quality standards.",
+      metrics: ["40% Time Reduction", "Zero Compromises", "Industry Standards"],
+      icon: Wrench,
+      image:
+        "https://images.unsplash.com/photo-1504307651254-35680f356dfd?w=800&h=600&fit=crop",
+    },
+    {
+      title: "Predictive Quality Assurance",
+      description:
+        "Real-time monitoring systems with AI-driven quality control ensure every restoration meets or exceeds regulatory requirements.",
+      metrics: ["Real-Time Monitoring", "Predictive Analysis", "100% Compliance"],
+      icon: Zap,
+      image:
+        "https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=800&h=600&fit=crop",
+    },
+  ];
+
+  return (
+    <section className="py-24 bg-background relative" id="portfolio">
+      <div className="container mx-auto px-6">
+        <div className="text-center mb-16">
+          <div className="inline-flex items-center space-x-2 bg-luxury-charcoal/50 backdrop-blur-sm border border-secondary/30 rounded-full px-6 py-3 mb-6">
+            <Award className="w-5 h-5 text-secondary" />
+            <span className="text-luxury-platinum font-medium">Excellence Delivered</span>
+          </div>
+
+          <h2 className="text-5xl md:text-6xl font-bold mb-6">
+            <span className="text-foreground">How We Fast-Track</span>
+            <br />
+            <span className="text-gradient">Restoration Projects with AI</span>
+          </h2>
+
+          <p className="text-xl text-muted-foreground max-w-3xl mx-auto leading-relaxed">
+            Discover how artificial intelligence accelerates our restoration workflows without compromising
+            delivery quality while strictly adhering to all industry standards and codes.
+          </p>
+        </div>
+
+        <div className="grid grid-cols-1 lg:grid-cols-3 gap-8">
+          {aiWorkflowFeatures.map((feature, index) => (
+            <Card key={index} className="card-luxury overflow-hidden hover-lift group transition-all duration-500">
+              <div className="relative h-64 overflow-hidden">
+                <img
+                  src={feature.image}
+                  alt={feature.title}
+                  className="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
+                />
+                <div className="absolute inset-0 bg-gradient-to-t from-luxury-navy/80 to-transparent"></div>
+                <div className="absolute top-4 right-4">
+                  <div className="inline-flex items-center justify-center w-12 h-12 bg-gradient-luxury rounded-full">
+                    <feature.icon className="w-6 h-6 text-luxury-navy" />
+                  </div>
+                </div>
+              </div>
+
+              <div className="p-8">
+                <h3 className="text-2xl font-bold text-foreground mb-3">
+                  {feature.title}
+                </h3>
+
+                <p className="text-muted-foreground mb-6 leading-relaxed">
+                  {feature.description}
+                </p>
+
+                <div className="flex flex-wrap gap-2 mb-6">
+                  {feature.metrics.map((metric, idx) => (
+                    <span key={idx} className="text-xs font-medium text-secondary bg-secondary/10 px-3 py-1 rounded-full">
+                      {metric}
+                    </span>
+                  ))}
+                </div>
+
+                <Button variant="ghost" className="w-full group hover:bg-accent/10 hover:text-accent transition-all">
+                  Learn More About AI
+                  <ArrowRight className="ml-2 w-4 h-4 transition-transform group-hover:translate-x-1" />
+                </Button>
+              </div>
+            </Card>
+          ))}
+        </div>
+
+        <div className="text-center mt-16">
+          <div className="bg-gradient-card border border-accent/30 rounded-2xl p-12 max-w-4xl mx-auto">
+            <div className="flex items-center justify-center space-x-3 mb-6">
+              <Star className="w-8 h-8 text-accent" />
+              <Star className="w-8 h-8 text-accent" />
+              <Star className="w-8 h-8 text-accent" />
+              <Star className="w-8 h-8 text-accent" />
+              <Star className="w-8 h-8 text-accent" />
+            </div>
+            <h3 className="text-3xl font-bold text-foreground mb-4">
+              Ready to Build Excellence?
+            </h3>
+            <p className="text-xl text-muted-foreground mb-8">
+              Join our exclusive portfolio of premium construction projects
+            </p>
+            <Button className="btn-luxury text-lg px-10 py-6">
+              Start Your Elite Project
+            </Button>
+          </div>
+        </div>
       </div>
-      <div class="card">
-        <h4>Structural Engineering</h4>
-        <p>Innovative and safe designs tailored to your project needs and site constraints.</p>
-      </div>
-      <div class="card">
-        <h4>Restoration & Retrofit</h4>
-        <p>Modernizing aging infrastructure while preserving its integrity and value.</p>
-      </div>
-    </div>
-  </section>
-  <section class="section" id="projects">
-    <h3>Featured Projects</h3>
-    <div class="grid">
-      <div class="card">
-        <h4>Metro Line Expansion</h4>
-        <p>Engineering and construction of a major transit line, delivered ahead of schedule.</p>
-      </div>
-      <div class="card">
-        <h4>City Center Tower</h4>
-        <p>42-story commercial tower featuring smart systems and high-performance façades.</p>
-      </div>
-    </div>
-  </section>
-  <footer>
-    &copy; 2025 Resolution Tech Constructions. All rights reserved.
-  </footer>
-</body>
-</html>
+    </section>
+  );
+};
+
+export default PortfolioSection;
