--- a/index.html
+++ b/index.html
@@ -1,125 +1,77 @@
-import { Card } from "@/components/ui/card";
-import { Button } from "@/components/ui/button";
-import { Building, Wrench, Zap, ArrowRight, Star, Award } from "lucide-react";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Resolution Tech Constructions | Coming Soon</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to bottom, #0f0f0f, #1a1a1a);
+      color: #f5f5f5;
+      font-family: 'Open Sans', sans-serif;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      overflow: hidden;
+    }
 
-const PortfolioSection = () => {
-  const aiWorkflowFeatures = [
-    {
-      title: "AI-Powered Project Assessment",
-      description:
-        "Advanced algorithms analyze structural integrity, material conditions, and restoration requirements within hours instead of weeks.",
-      metrics: ["90% Faster Analysis", "99.7% Accuracy", "Code Compliant"],
-      icon: Building,
-      image:
-        "https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?w=800&h=600&fit=crop",
-    },
-    {
-      title: "Intelligent Resource Optimization",
-      description:
-        "Machine learning algorithms optimize material procurement, workforce allocation, and timeline management while maintaining quality standards.",
-      metrics: ["40% Time Reduction", "Zero Compromises", "Industry Standards"],
-      icon: Wrench,
-      image:
-        "https://images.unsplash.com/photo-1504307651254-35680f356dfd?w=800&h=600&fit=crop",
-    },
-    {
-      title: "Predictive Quality Assurance",
-      description:
-        "Real-time monitoring systems with AI-driven quality control ensure every restoration meets or exceeds regulatory requirements.",
-      metrics: ["Real-Time Monitoring", "Predictive Analysis", "100% Compliance"],
-      icon: Zap,
-      image:
-        "https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=800&h=600&fit=crop",
-    },
-  ];
+    .container {
+      max-width: 600px;
+      padding: 2rem;
+      background-color: rgba(0, 0, 0, 0.75);
+      border-radius: 16px;
+      box-shadow: 0 0 30px rgba(255, 215, 0, 0.2);
+      border: 1px solid #333;
+      animation: fadeIn 1.8s ease;
+    }
 
-  return (
-    <section className="py-24 bg-background relative" id="portfolio">
-      <div className="container mx-auto px-6">
-        <div className="text-center mb-16">
-          <div className="inline-flex items-center space-x-2 bg-luxury-charcoal/50 backdrop-blur-sm border border-secondary/30 rounded-full px-6 py-3 mb-6">
-            <Award className="w-5 h-5 text-secondary" />
-            <span className="text-luxury-platinum font-medium">Excellence Delivered</span>
-          </div>
+    img.logo {
+      max-width: 180px;
+      margin-bottom: 2rem;
+      animation: fadeInDown 1.5s ease;
+    }
 
-          <h2 className="text-5xl md:text-6xl font-bold mb-6">
-            <span className="text-foreground">How We Fast-Track</span>
-            <br />
-            <span className="text-gradient">Restoration Projects with AI</span>
-          </h2>
+    h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.5rem;
+      color: gold;
+      margin-bottom: 1rem;
+    }
 
-          <p className="text-xl text-muted-foreground max-w-3xl mx-auto leading-relaxed">
-            Discover how artificial intelligence accelerates our restoration workflows without compromising
-            delivery quality while strictly adhering to all industry standards and codes.
-          </p>
-        </div>
+    p {
+      font-size: 1.1rem;
+      color: #ccc;
+      margin-bottom: 2rem;
+    }
 
-        <div className="grid grid-cols-1 lg:grid-cols-3 gap-8">
-          {aiWorkflowFeatures.map((feature, index) => (
-            <Card key={index} className="card-luxury overflow-hidden hover-lift group transition-all duration-500">
-              <div className="relative h-64 overflow-hidden">
-                <img
-                  src={feature.image}
-                  alt={feature.title}
-                  className="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
-                />
-                <div className="absolute inset-0 bg-gradient-to-t from-luxury-navy/80 to-transparent"></div>
-                <div className="absolute top-4 right-4">
-                  <div className="inline-flex items-center justify-center w-12 h-12 bg-gradient-luxury rounded-full">
-                    <feature.icon className="w-6 h-6 text-luxury-navy" />
-                  </div>
-                </div>
-              </div>
+    .tagline {
+      font-size: 0.95rem;
+      color: silver;
+      font-style: italic;
+    }
 
-              <div className="p-8">
-                <h3 className="text-2xl font-bold text-foreground mb-3">
-                  {feature.title}
-                </h3>
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.98); }
+      to { opacity: 1; transform: scale(1); }
+    }
 
-                <p className="text-muted-foreground mb-6 leading-relaxed">
-                  {feature.description}
-                </p>
-
-                <div className="flex flex-wrap gap-2 mb-6">
-                  {feature.metrics.map((metric, idx) => (
-                    <span key={idx} className="text-xs font-medium text-secondary bg-secondary/10 px-3 py-1 rounded-full">
-                      {metric}
-                    </span>
-                  ))}
-                </div>
-
-                <Button variant="ghost" className="w-full group hover:bg-accent/10 hover:text-accent transition-all">
-                  Learn More About AI
-                  <ArrowRight className="ml-2 w-4 h-4 transition-transform group-hover:translate-x-1" />
-                </Button>
-              </div>
-            </Card>
-          ))}
-        </div>
-
-        <div className="text-center mt-16">
-          <div className="bg-gradient-card border border-accent/30 rounded-2xl p-12 max-w-4xl mx-auto">
-            <div className="flex items-center justify-center space-x-3 mb-6">
-              <Star className="w-8 h-8 text-accent" />
-              <Star className="w-8 h-8 text-accent" />
-              <Star className="w-8 h-8 text-accent" />
-              <Star className="w-8 h-8 text-accent" />
-              <Star className="w-8 h-8 text-accent" />
-            </div>
-            <h3 className="text-3xl font-bold text-foreground mb-4">
-              Ready to Build Excellence?
-            </h3>
-            <p className="text-xl text-muted-foreground mb-8">
-              Join our exclusive portfolio of premium construction projects
-            </p>
-            <Button className="btn-luxury text-lg px-10 py-6">
-              Start Your Elite Project
-            </Button>
-          </div>
-        </div>
-      </div>
-    </section>
-  );
-};
-
-export default PortfolioSection;
+    @keyframes fadeInDown {
+      from { opacity: 0; transform: translateY(-30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Logo.png" alt="Resolution Tech Logo" class="logo" />
+    <h1>Coming Soon</h1>
+    <p>We’re building a bold, AI-powered future in construction and restoration.</p>
+    <p class="tagline">Engineering excellence. Powered by innovation.</p>
+  </div>
+</body>
+</html>
