--- a/index.html
+++ b/index.html
@@ -48,32 +48,55 @@
       font-size: 1rem;
     }
 
-    .hero {
-      padding: 5rem 2rem;
-      text-align: center;
+    .video-section {
+      position: relative;
+      height: 100vh;
+      overflow: hidden;
     }
 
-    .hero h1 {
+    .background-video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      min-width: 100%;
+      min-height: 100%;
+      object-fit: cover;
+      z-index: -1;
+    }
+
+    .video-overlay {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      padding: 3rem 2rem;
+      background: rgba(0, 0, 0, 0.4);
+    }
+
+    .hero-content {
+      text-align: center;
+      color: white;
+      max-width: 900px;
+    }
+
+    .hero-content h1 {
       font-size: 3rem;
       font-weight: bold;
-      color: #008080;
+      margin-bottom: 1rem;
     }
 
-    .hero h2 {
+    .hero-content h2 {
       font-size: 2rem;
       font-weight: 300;
-      color: #444;
-      margin-top: 1rem;
+      margin-bottom: 1rem;
     }
 
-    .hero p {
-      max-width: 800px;
-      margin: 1rem auto;
-      color: #555;
+    .hero-content p {
+      font-size: 1.1rem;
+      margin-bottom: 2rem;
     }
 
-    .hero .cta-button {
-      margin-top: 2rem;
+    .cta-button {
       padding: 0.8rem 1.5rem;
       background-color: #008080;
       color: white;
@@ -101,19 +124,6 @@
       border-radius: 10px;
       box-shadow: 0 0 15px rgba(0,0,0,0.05);
       text-align: center;
-    }
-
-    .tech .image-text {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-      align-items: center;
-    }
-
-    .tech img {
-      max-width: 500px;
-      width: 100%;
-      border-radius: 15px;
     }
 
     .contact-form input, .contact-form textarea, .contact-form select {
@@ -155,83 +165,37 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <h1>Resolution Tech Constructions</h1>
-    <h2>Engineering the future with artificial intelligence</h2>
-    <p>Delivering premium construction solutions across residential, commercial, and industrial sectors with unmatched precision and efficiency.</p>
-    <button class="cta-button">Explore AI Advantage</button>
+  <section class="video-section">
+    <video autoplay muted loop playsinline class="background-video">
+      <source src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/video/Modern%20city.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="video-overlay">
+      <div class="hero-content">
+        <h1>Resolution Tech Constructions</h1>
+        <h2>Engineering the future with artificial intelligence</h2>
+        <p>Delivering premium construction solutions across residential, commercial, and industrial sectors with unmatched precision and efficiency.</p>
+        <button class="cta-button">Explore AI Advantage</button>
+      </div>
+    </div>
   </section>
 
   <section class="features" id="advantage">
     <h2 style="text-align: center">The AI Advantage</h2>
     <div class="features-grid">
       <div class="card">
-        <h3>40%</h3>
-        <p><strong>Faster Delivery</strong><br>AI-optimized scheduling reduces timelines.</p>
+        <h3>Time Optimization</h3>
+        <p>AI cuts project timelines by up to 40% by automating repetitive tasks, reducing admin work, and streamlining content creation. Less time managing, more time building — with faster decisions, instant reports, and efficient workflows.</p>
       </div>
       <div class="card">
-        <h3>25%</h3>
-        <p><strong>Cost Reduction</strong><br>Automation minimizes waste and optimizes budgets.</p>
+        <h3>Reduced Overhead</h3>
+        <p>AI reduces overhead by automating admin, management, and repetitive tasks — cutting down labor hours and inefficiencies. You only pay for the expert-driven creative and technical work that truly adds value.</p>
       </div>
       <div class="card">
-        <h3>99.8%</h3>
-        <p><strong>Quality Score</strong><br>Real-time quality monitoring ensures excellence.</p>
+        <h3>Error Prevention</h3>
+        <p>AI minimizes human errors by catching missed emails, calculation mistakes, and managerial oversights before they escalate. The result: higher quality output, fewer delays, and reduced liability across every project stage.</p>
       </div>
     </div>
   </section>
-
-  <section class="tech">
-    <h2 style="text-align: center">Cutting-Edge Technologies</h2>
-    <div class="image-text">
-      <img src="https://i.imgur.com/zFGQGql.jpg" alt="Tech Visualization"/>
-      <div>
-        <p><strong>Machine Learning</strong><br>Predict outcomes and optimize processes.</p>
-        <p><strong>Predictive Analytics</strong><br>Prevent delays and overruns before they happen.</p>
-        <p><strong>Automation Systems</strong><br>Free experts from repetitive tasks.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="process">
-    <h2 style="text-align: center">AI-Powered Process</h2>
-    <p style="text-align: center">Our intelligent workflow optimizes every phase of construction.</p>
-    <div class="process-grid">
-      <div class="card">
-        <strong>01 Analysis</strong><br>AI analyzes project requirements and constraints
-      </div>
-      <div class="card">
-        <strong>02 Planning</strong><br>Machine learning optimizes schedules and resources
-      </div>
-      <div class="card">
-        <strong>03 Execution</strong><br>Automated systems monitor progress in real time
-      </div>
-      <div class="card">
-        <strong>04 Delivery</strong><br>Quality assurance ensures perfect completion
-      </div>
-    </div>
-  </section>
-
-  <section class="contact" id="contact">
-    <h2 style="text-align: center">Let's Build the Future</h2>
-    <p style="text-align: center">Contact our team to start your AI-powered construction journey today.</p>
-    <div class="contact-form">
-      <input type="text" placeholder="First Name">
-      <input type="text" placeholder="Last Name">
-      <input type="email" placeholder="Email">
-      <input type="tel" placeholder="Phone">
-      <select>
-        <option>Select project type</option>
-        <option>Residential</option>
-        <option>Commercial</option>
-        <option>Industrial</option>
-      </select>
-      <textarea rows="4" placeholder="Project Details"></textarea>
-      <button>Send Message</button>
-    </div>
-  </section>
-
-  <footer>
-    <p>Resolution Tech Constructions &copy; 2025. All rights reserved.</p>
-  </footer>
 </body>
 </html>
