--- a/index.html
+++ b/index.html
@@ -126,6 +126,21 @@
       text-align: center;
     }
 
+    .service-box {
+      position: relative;
+      height: 250px;
+      background-size: cover;
+      background-position: center;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-size: 1.2rem;
+      font-weight: bold;
+      text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    }
+
     .contact-form input, .contact-form textarea, .contact-form select {
       width: 100%;
       padding: 0.75rem;
@@ -194,6 +209,27 @@
       <div class="card">
         <h3>Error Prevention</h3>
         <p>AI minimizes human errors by catching missed emails, calculation mistakes, and managerial oversights before they escalate. The result: higher quality output, fewer delays, and reduced liability across every project stage.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="features" id="services">
+    <h2 style="text-align: center">Our Services</h2>
+    <div class="services-grid">
+      <div class="service-box" style="background-image: url('https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png');">
+        Structural Engineering
+      </div>
+      <div class="service-box" style="background-image: url('https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png');">
+        Civil Engineering
+      </div>
+      <div class="service-box" style="background-image: url('https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png');">
+        Building Envelope
+      </div>
+      <div class="service-box" style="background-image: url('https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png');">
+        MEP Services
+      </div>
+      <div class="service-box" style="background-image: url('https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png');">
+        Special Inspections
       </div>
     </div>
   </section>
