--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
       margin: auto;
     }
 
-    .features-grid, .services-grid, .process-grid {
+    .features-grid, .services-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 2rem;
     }
 
@@ -126,37 +126,35 @@
       text-align: center;
     }
 
-    .service-box {
-      position: relative;
-      height: 250px;
-      background-size: cover;
-      background-position: center;
+    .service-item {
+      background: #fff;
+      border: 1px solid #ddd;
       border-radius: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-size: 1.2rem;
-      font-weight: bold;
-      text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+      box-shadow: 0 0 8px rgba(0,0,0,0.03);
+      overflow: hidden;
+      text-align: center;
     }
 
-    .contact-form input, .contact-form textarea, .contact-form select {
+    .service-item img {
       width: 100%;
-      padding: 0.75rem;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 5px;
+      height: 200px;
+      object-fit: cover;
+      border-bottom: 1px solid #eee;
     }
 
-    .contact-form button {
-      background: #008080;
-      color: white;
-      padding: 0.75rem 2rem;
-      border: none;
-      border-radius: 5px;
-      font-weight: bold;
-      cursor: pointer;
+    .service-description {
+      padding: 1rem;
+    }
+
+    .service-description h3 {
+      margin-bottom: 0.5rem;
+      font-size: 1.2rem;
+      font-weight: 700;
+    }
+
+    .service-description p {
+      font-size: 0.95rem;
+      color: #444;
     }
 
     footer {
@@ -216,22 +214,46 @@
   <section class="features" id="services">
     <h2 style="text-align: center">Our Services</h2>
     <div class="services-grid">
-      <div class="service-box" style="background-image: url('https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png');">
-        Structural Engineering
+      <div class="service-item">
+        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png" alt="Structural Engineering">
+        <div class="service-description">
+          <h3>Structural Engineering</h3>
+          <p>Advanced structural analysis, steel and concrete design, retrofit strategies, and integrity evaluations for all project types.</p>
+        </div>
       </div>
-      <div class="service-box" style="background-image: url('https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png');">
-        Civil Engineering
+      <div class="service-item">
+        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png" alt="Civil Engineering">
+        <div class="service-description">
+          <h3>Civil Engineering</h3>
+          <p>Site development, grading, drainage, utility coordination, roadway layout, and compliance with local codes and permits.</p>
+        </div>
       </div>
-      <div class="service-box" style="background-image: url('https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png');">
-        Building Envelope
+      <div class="service-item">
+        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png" alt="Building Envelope">
+        <div class="service-description">
+          <h3>Building Envelope</h3>
+          <p>Waterproofing, facade assessment, roofing systems, thermal performance, and energy-efficient enclosure solutions.</p>
+        </div>
       </div>
-      <div class="service-box" style="background-image: url('https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png');">
-        MEP Services
+      <div class="service-item">
+        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png" alt="MEP Services">
+        <div class="service-description">
+          <h3>MEP Services</h3>
+          <p>Mechanical, electrical, and plumbing design with code compliance, load analysis, and energy optimization.</p>
+        </div>
       </div>
-      <div class="service-box" style="background-image: url('https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png');">
-        Special Inspections
+      <div class="service-item">
+        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png" alt="Special Inspections">
+        <div class="service-description">
+          <h3>Special Inspections</h3>
+          <p>Third-party inspections for structural steel, concrete, masonry, fireproofing, and more to ensure code and safety compliance.</p>
+        </div>
       </div>
     </div>
   </section>
+
+  <footer>
+    &copy; 2025 Resolution Tech Constructions. All rights reserved.
+  </footer>
 </body>
 </html>
