--- a/index.html
+++ b/index.html
@@ -178,11 +178,9 @@
     </nav>
   </header>
 
+  <!-- Video Background Section with Two-Video Loop -->
   <section class="video-section">
-    <video autoplay muted loop playsinline class="background-video">
-      <source src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/video/Modern%20city.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <video id="looped-video" autoplay muted playsinline class="background-video"></video>
     <div class="video-overlay">
       <div class="hero-content">
         <h1>Resolution Tech Constructions</h1>
@@ -192,6 +190,26 @@
       </div>
     </div>
   </section>
+
+  <!-- Video Switching Script -->
+  <script>
+    const videoSources = [
+      "https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/video/Metro%20city.mp4",
+      "https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/video/Sunset%20city.mp4"
+    ];
+    const videoElement = document.getElementById("looped-video");
+    let currentIndex = 0;
+
+    function playNext() {
+      videoElement.src = videoSources[currentIndex];
+      videoElement.load();
+      videoElement.play();
+      currentIndex = (currentIndex + 1) % videoSources.length;
+    }
+
+    videoElement.addEventListener("ended", playNext);
+    playNext();
+  </script>
 
   <section class="features" id="advantage">
     <h2 style="text-align: center">The AI Advantage</h2>
