--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 </head>
 <body>
   <header>
-    <img class="logo" src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Logo.png" alt="Resolution Tech Logo"/>
+    <img class="logo" src="https://github.com/Resolutiontechconstructions/Tech/blob/main/images/logo.jpg" alt="Resolution Tech Logo"/>
     <nav>
       <a href="#services">Services</a>
       <a href="#advantage">AI Advantage</a>
@@ -178,7 +178,6 @@
     </nav>
   </header>
 
-  <!-- Updated Single Video Background Section -->
   <section class="video-section">
     <video autoplay muted loop playsinline class="background-video">
       <source src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/video/Resolutiontechmainvideop.mp4" type="video/mp4">
@@ -199,15 +198,15 @@
     <div class="features-grid">
       <div class="card">
         <h3>Time Optimization</h3>
-        <p>AI cuts project timelines by up to 40% by automating repetitive tasks, reducing admin work, and streamlining content creation. Less time managing, more time building — with faster decisions, instant reports, and efficient workflows.</p>
+        <p>AI cuts project timelines by up to 40% by automating repetitive tasks, reducing admin work, and streamlining content creation.</p>
       </div>
       <div class="card">
         <h3>Reduced Overhead</h3>
-        <p>AI reduces overhead by automating admin, management, and repetitive tasks — cutting down labor hours and inefficiencies. You only pay for the expert-driven creative and technical work that truly adds value.</p>
+        <p>AI reduces overhead by automating admin, management, and repetitive tasks — cutting down labor hours and inefficiencies.</p>
       </div>
       <div class="card">
         <h3>Error Prevention</h3>
-        <p>AI minimizes human errors by catching missed emails, calculation mistakes, and managerial oversights before they escalate. The result: higher quality output, fewer delays, and reduced liability across every project stage.</p>
+        <p>AI minimizes human errors by catching missed emails, calculation mistakes, and managerial oversights before they escalate.</p>
       </div>
     </div>
   </section>
