--- a/index.html
+++ b/index.html
@@ -73,25 +73,30 @@
       background: rgba(0, 0, 0, 0.4);
     }
 
-    .hero-content {
+    .glass-pane {
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border-radius: 15px;
+      padding: 2rem;
+      max-width: 900px;
       text-align: center;
       color: white;
-      max-width: 900px;
     }
 
-    .hero-content h1 {
+    .glass-pane h1 {
       font-size: 3rem;
       font-weight: bold;
       margin-bottom: 1rem;
     }
 
-    .hero-content h2 {
+    .glass-pane h2 {
       font-size: 2rem;
       font-weight: 300;
       margin-bottom: 1rem;
     }
 
-    .hero-content p {
+    .glass-pane p {
       font-size: 1.1rem;
       margin-bottom: 2rem;
     }
@@ -184,7 +189,7 @@
       Your browser does not support the video tag.
     </video>
     <div class="video-overlay">
-      <div class="hero-content">
+      <div class="glass-pane">
         <h1>Resolution Tech Constructions</h1>
         <h2>Engineering the future with artificial intelligence</h2>
         <p>Delivering premium construction solutions across residential, commercial, and industrial sectors with unmatched precision and efficiency.</p>
@@ -207,47 +212,6 @@
       <div class="card">
         <h3>Error Prevention</h3>
         <p>AI minimizes human errors by catching missed emails, calculation mistakes, and managerial oversights before they escalate.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="features" id="services">
-    <h2 style="text-align: center">Our Services</h2>
-    <div class="services-grid">
-      <div class="service-item">
-        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png" alt="Structural Engineering">
-        <div class="service-description">
-          <h3>Structural Engineering</h3>
-          <p>Advanced structural analysis, steel and concrete design, retrofit strategies, and integrity evaluations for all project types.</p>
-        </div>
-      </div>
-      <div class="service-item">
-        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png" alt="Civil Engineering">
-        <div class="service-description">
-          <h3>Civil Engineering</h3>
-          <p>Site development, grading, drainage, utility coordination, roadway layout, and compliance with local codes and permits.</p>
-        </div>
-      </div>
-      <div class="service-item">
-        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png" alt="Building Envelope">
-        <div class="service-description">
-          <h3>Building Envelope</h3>
-          <p>Waterproofing, facade assessment, roofing systems, thermal performance, and energy-efficient enclosure solutions.</p>
-        </div>
-      </div>
-      <div class="service-item">
-        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png" alt="MEP Services">
-        <div class="service-description">
-          <h3>MEP Services</h3>
-          <p>Mechanical, electrical, and plumbing design with code compliance, load analysis, and energy optimization.</p>
-        </div>
-      </div>
-      <div class="service-item">
-        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png" alt="Special Inspections">
-        <div class="service-description">
-          <h3>Special Inspections</h3>
-          <p>Third-party inspections for structural steel, concrete, masonry, fireproofing, and more to ensure code and safety compliance.</p>
-        </div>
       </div>
     </div>
   </section>
