--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
     </nav>
   </header>
 
-  <!-- Updated Single Video Background Section -->
   <section class="video-section">
     <video autoplay muted loop playsinline class="background-video">
       <source src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/video/Resolutiontechmainvideop.mp4" type="video/mp4">
@@ -199,15 +198,15 @@
     <div class="features-grid">
       <div class="card">
         <h3>Time Optimization</h3>
-        <p>AI cuts project timelines by up to 40% by automating repetitive tasks, reducing admin work, and streamlining content creation. Less time managing, more time building — with faster decisions, instant reports, and efficient workflows.</p>
+        <p>AI cuts project timelines by up to 40% by automating repetitive tasks, reducing admin work, and streamlining content creation.</p>
       </div>
       <div class="card">
         <h3>Reduced Overhead</h3>
-        <p>AI reduces overhead by automating admin, management, and repetitive tasks — cutting down labor hours and inefficiencies. You only pay for the expert-driven creative and technical work that truly adds value.</p>
+        <p>AI reduces overhead by automating admin, management, and repetitive tasks — cutting labor hours and inefficiencies.</p>
       </div>
       <div class="card">
         <h3>Error Prevention</h3>
-        <p>AI minimizes human errors by catching missed emails, calculation mistakes, and managerial oversights before they escalate. The result: higher quality output, fewer delays, and reduced liability across every project stage.</p>
+        <p>AI minimizes human errors by catching missed emails, calculation mistakes, and managerial oversights before they escalate.</p>
       </div>
     </div>
   </section>
@@ -215,41 +214,19 @@
   <section class="features" id="services">
     <h2 style="text-align: center">Our Services</h2>
     <div class="services-grid">
-      <div class="service-item">
-        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png" alt="Structural Engineering">
-        <div class="service-description">
-          <h3>Structural Engineering</h3>
-          <p>Advanced structural analysis, steel and concrete design, retrofit strategies, and integrity evaluations for all project types.</p>
-        </div>
-      </div>
-      <div class="service-item">
-        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png" alt="Civil Engineering">
-        <div class="service-description">
-          <h3>Civil Engineering</h3>
-          <p>Site development, grading, drainage, utility coordination, roadway layout, and compliance with local codes and permits.</p>
-        </div>
-      </div>
-      <div class="service-item">
-        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png" alt="Building Envelope">
-        <div class="service-description">
-          <h3>Building Envelope</h3>
-          <p>Waterproofing, facade assessment, roofing systems, thermal performance, and energy-efficient enclosure solutions.</p>
-        </div>
-      </div>
-      <div class="service-item">
-        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png" alt="MEP Services">
-        <div class="service-description">
-          <h3>MEP Services</h3>
-          <p>Mechanical, electrical, and plumbing design with code compliance, load analysis, and energy optimization.</p>
-        </div>
-      </div>
-      <div class="service-item">
-        <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png" alt="Special Inspections">
-        <div class="service-description">
-          <h3>Special Inspections</h3>
-          <p>Third-party inspections for structural steel, concrete, masonry, fireproofing, and more to ensure code and safety compliance.</p>
-        </div>
-      </div>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png"><div class="service-description"><h3>Structural Design and Analysis</h3></div></div>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png"><div class="service-description"><h3>Restoration and Rehabilitation Engineering</h3></div></div>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png"><div class="service-description"><h3>Forensic Engineering and Expert Reports</h3></div></div>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png"><div class="service-description"><h3>Inspection and Compliance Services</h3></div></div>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png"><div class="service-description"><h3>Construction Administration</h3></div></div>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png"><div class="service-description"><h3>Building Facade Assessment and Repair</h3></div></div>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png"><div class="service-description"><h3>Moisture Intrusion and Envelope Diagnostics</h3></div></div>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png"><div class="service-description"><h3>Roofing and Flashing Services</h3></div></div>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png"><div class="service-description"><h3>Building Envelope CAD and Design Detailing</h3></div></div>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png"><div class="service-description"><h3>Envelope Construction Administration</h3></div></div>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png"><div class="service-description"><h3>Discipline Specific CAD Support</h3></div></div>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png"><div class="service-description"><h3>Subscription Based Structural Support</h3></div></div>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png"><div class="service-description"><h3>Additional Services</h3></div></div>
     </div>
   </section>
 
