--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
         <p>Professionally drafted technical drawings support all trades—structure, architecture, MEP, electrical, plumbing, and site work.</p>
       </div>
     </div>
+    <div class="service-item">
+      <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png">
+      <div class="service-description">
+        <h3>Subscription Based Structural Support</h3>
+        <p>Ongoing structural consultation and document support provided through an affordable, monthly plan enhanced by AI.</p>
+      </div>
+    </div>
     <div class="service-item" style="grid-column: 2 / span 2;">
       <img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png">
       <div class="service-description">
