--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 </head>
 <body>
   <header>
-    <img class="logo" src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Logo.png" alt="Resolution Tech Logo"/>
+    <img class="logo" src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/logo.jpg" alt="Resolution Tech Logo"/>
     <nav>
       <a href="#services">Services</a>
       <a href="#advantage">AI Advantage</a>
